<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/change_language"
        android:title="@string/ganti_bahasa"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_see_list_favourite"
        android:icon="@drawable/lovemerah"
        android:title="@string/hapus"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_set_alarm"
        android:icon="@drawable/ic_baseline_access_alarm_24"
        android:title="@string/Alarm"
        app:showAsAction="ifRoom" />
</menu>